no longer keeping current in the session, i just query for the current slide every time. kepping a  boolean in the session that toggles the visibility of the shows title/body

--- a/client/assets/css/liveslides.less
+++ b/client/assets/css/liveslides.less
@@ -1,4 +1,5 @@
-li {
+#index { 
+  li {
   clear: both;
   height: 2em;
   padding-top: 1em;
@@ -31,4 +32,5 @@ li.past:hover, li.first:hover {
 }
 li.future {
   opacity: 0.5;
+}
 }
